--- a/assets/style.css
+++ b/assets/style.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
 }
-
 header,
 footer {
     width: 100%;
@@ -36,8 +35,7 @@ p {
   .card {
     width: 80%;
     margin: 40px auto;
-    border: 5px solid gray;
+    border: 5px solid rgb(24, 16, 169);
     box-shadow: 5px 10px #888888;
   }
 
-  
